website/versioned_docs/version-2.0.0/increase_paid_storage.md
---
title: Increase Paid Storage
author: Davis Sawali
---

<!-- SPDX-License-Identifier: Apache-2.0
     This file has been modified for the WebMavryk fork of Taquito by Mavryk Dynamics (2025).
     Original project: Taquito by ECAD Labs Inc. -->

Increase Paid Storage is a new operation available for use starting from Protocol 14 (Kathmandu). It is a new operation that enables a payer to increase the paid storage of a smart contract by a certain byte amount.

This helps resolve an issue where several operations on the same contract would fail when they are added at the same level due to the storage limit being lower than the `paid_storage_size_diff`.

For more information on this change, refer to this [MR](https://gitlab.com/mavryk-network/mavryk-protocol/-/merge_requests/5605) in the Mavryk codebase.
## Examples
Similar to other operations, the Increase Paid Storage operation is available in the Contract and Wallet API

### Contract API

#### Simple Usage
```js
const op = await Mavryk.contract.increasePaidStorage({
  amount: 2,
  destination: 'SMART_CONTRACT_ADDRESS'
});

await op.confirmation();
```
- `amount` is the number of `bytes` you want to increase the paid storage by
- `destination` is the `KT1` address of the smart contract which storage you would like to increase

After waiting for the operation confirmation, you will also have access to various getters of the operation such as `status`, `amount`, `destination`, `fee`, `gasLimit`, `errors`, `storageLimit`, `consumedMilligas`.

#### Usage in Batches
```typescript
const op = await Mavryk.contract
    .batch()
    .withOrigination({
      balance: "1",
      code: `parameter string;
      storage string;
      code {CAR;
            PUSH string "Hello ";
            CONCAT;
            NIL operation; PAIR};
      `,
      init: `"test"`
    })
    .withIncreasePaidStorage({
      amount: 1,
      destination: 'SMART_CONTRACT_ADDRESS'
    })
    .send();

    await op.confirmation();
```

or 
```typescript
const op = await Mavryk.contract.batch([
    {
      kind: 'origination', 
      balance: '1', 
      code: SAMPLE_CODE, 
      storage: 0 
    },
    { 
      kind: 'increase_paid_storage',
      amount: 1, 
      destination: 'SMART_CONTRACT_ADDRESS' 
    } 
    ])
    .send();

await op.confirmation();
```

Both syntax will work fine for batching any operations, including `increase_paid_storage`.

### Wallet API

#### Usage Example
```typescript
const op = await Mavryk.wallet.increasePaidStorage({
  amount: 1,
  destination: simpleContractAddress
}).send();
```

#### Usage in Batches
```typescript
const batch = await Mavryk.wallet
  .batch()
  .withOrigination({
    balance: "1",
    code: `parameter string;
      storage string;
      code {CAR;
      PUSH string "Hello ";
      CONCAT;
      NIL operation; PAIR};
    `,
    init: `"test"`
  })
  .withIncreasePaidStorage({
    amount: 1,
    destination: simpleContractAddress
  });

const op = await batch.send();
await op.confirmation();
```
